# TestPrj

./: .dockerignore  .env  .env.docker  .env.example  .env.local  .gitignore  DEPLOYMENT.md  Dockerfile  POSTMAN_TESTS.md  QUICK_DEPLOY_DOCKER.md  README.md  README.uk.md  deploy.local.py  deploy.py  docker-compose.yml  pyproject.toml
README/en/: DEPLOYMENT.md  README.md
README/uk/: DEPLOYMENT.md  MODULES_PARSERS.md  POSTMAN_TESTS.md  README.md
config/: settings.py  settings_test.py  urls.py
config/docs/: swagger_generator.py  urls.py
config/extra_config/: __init__.py  apps_config.py  auth_config.py  cors_config.py  database_config.py  environment.py  internationalization_config.py  logging_config.py  rest_framework_config.py  static_config.py  swagger_config.py
core/: enums.py  exceptions.py  logging.py  models.py  schemas.py  serializers.py
modules/: README.md  brain_bs4_parser.py  brain_playwright_parser.py  brain_selenium_parser.py  load_django.py
nginx/: nginx.conf
parser_app/: README.md  apps.py  factory.py  filters.py  models.py  pagination.py  serializers.py  urls.py  views.py
parser_app/common/: __init__.py  constants.py  csvio.py  db.py  decorators.py  output.py  overlays.py  schema.py  utils.py
parser_app/migrations/: 0001_initial.py  0002_product_characteristics_product_display_resolution_and_more.py  (+1 more)
postman/: TestPrj_API.postman_collection.json  TestPrj_Local.postman_environment.json
scrapy_project/: README.md  README.uk.md  RUN_SPIDERS.md  __init__.py  output.json  scrapy.cfg
scripts/: read_records.py  wait_for_db.py  write_record.py
(+54 files in other folders)
