[tool.poetry]
name = "testprj"
version = "0.1.0"
description = ""
authors = ["Вадим <pvs.versia@gmail.com>"]
readme = "README.md"
packages = [{ include = "config" }, { include = "parser_app" }, { include = "core" }]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.0"
psycopg2-binary = "^2.9.11"
python-dotenv = "^1.2.1"
djangorestframework = "^3.16.1"
drf-yasg = "^1.21.7"
django-cors-headers = "^4.4.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.2"
playwright = "^1.48.0"
selenium = "^4.21.0"
webdriver-manager = "^4.0.1"
django-filter = "^25.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-django = "^4.8.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core>=2.2.1,<3.0.0"]
build-backend = "poetry.core.masonry.api"
